--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -18,10 +18,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@scriptfolio/local-client": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "http-proxy-middleware": "^2.0.6",
-    "@scriptfolio/local-client": "^0.0.0"
+    "http-proxy-middleware": "^2.0.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
