--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -26,5 +26,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21"
-  }
+  },
+  "gitHead": "7c99c06fffa4eb54a438394fb434d38db49cefee"
 }
