--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,5 +26,6 @@
     "@types/node": "^20.11.25",
     "commander": "^12.0.0",
     "esbuild": "^0.20.1"
-  }
+  },
+  "gitHead": "7c99c06fffa4eb54a438394fb434d38db49cefee"
 }
